school-system/src/main/java/com/example/school/system/error/UnauthorizedUser.java
package com.example.school.system.error;

public class UnauthorizedUser extends RuntimeException {
    public UnauthorizedUser(String message) {
        super(message);
    }
}
